# Mesh_Process_Repair

./: .gitignore  README.md  README.txt
assignment/: CMakeLists.txt  README.txt  face2faceindex.cpp  face2faceindex.h  makefile
assignment/diredgefiles/: 2ballout.diredge  2torus.diredge  5bout.diredge  747.diredge  biplane.diredge  bitorus.diredge  cherrytree.diredge  cow.diredge  cube.diredge  dodecahedron.diredge  tetrahedron.diredge  tetrahedron_bad.diredge
assignment/eulerformulacalculation/: CMakeLists.txt  eulerformulacalculation.cpp
assignment/face2faceindex/: CMakeLists.txt  face2faceindex.cpp
assignment/facefiles/: 2ballout.face  2torus.face  5bout.face  747.face  biplane.face  bitorus.face  cherrytree.face  cow.face  cube.face  cube_bad.face  dodecahedron.face  fuelinject.face  hamish_40k_edit_2.face  hexahedron.face  horse.face  icosahedron.face  legoman.face  many.face  octahedron.face  octahedron_bad.face  quadtorus.face  skeleton.face  tetrahedron.face  tetrahedron_bad.face  torus.face  tritorus.face  yoda.face
assignment/faceindex2directededge/: CMakeLists.txt  faceindex2directededge.cpp  faceindex2directededge.h
assignment/manifold_test_results/: 2ballout.txt  2torus.txt  5bout.txt  747.txt  Hamish.txt  biplane.txt  bitorus.txt  cherrytree.txt  cow.txt  cube.txt  dodecahedron.txt  fuelinject.txt  hamish_40k_edit.txt  hamish_40k_edit_2.txt  hexahedron.txt  horse.txt  icosahedron.txt  legoman.txt  many.txt  octahedron.txt  quadtorus.txt  skeleton.txt  tetrahedron.txt  tetrahedron_bad.txt  torus.txt  tritorus.txt  yoda.txt
assignment/manifoldtesting/: CMakeLists.txt  manifold test results.txt  manifoldtesting  manifoldtesting.cpp  manifoldtesting.h
assignment/meshrepair/: CMakeLists.txt  meshrepair.cpp
(+20 files in other folders)
