cmake_minimum_required(VERSION 3.10)
project(assignment)

set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED True)

add_subdirectory(face2faceindex)
add_subdirectory(faceindex2directededge)
add_subdirectory(manifoldtesting)
add_subdirectory(eulerformulacalculation)
add_subdirectory(utilities)
